# sfinae

./: CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: release.yml  static.yml
cmake/coverage/: CodeCoverage.cmake
docs/html/: annotated.html  classes.html  conceptconcepts_1_1__IsAnyOf.html  conceptconcepts_1_1container__like.html  conceptconcepts_1_1has__tuple__element.html  conceptconcepts_1_1string__like.html  conceptconcepts_1_1tuple__like.html  concepts.html  concepts_2print__ip_8hpp.html  concepts_2print__ip_8hpp_source.html  concepts_8hpp.html  concepts_8hpp_source.html  concepts__gtest_8cpp.html  concepts__gtest_8cpp_source.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a450380362cbf99a09ffbcf198cd3870.html  dir_c213e9b6a4ec949e4abdbb75e26456cc.html  files.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  main_8cpp_source.html  menudata.js  namespaceconcepts.html  namespacehw4.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespacesfinae.html  namespacesfinae_1_1details.html  print__helpers_8hpp.html  print__helpers_8hpp_source.html  sfinae_2print__ip_8hpp.html  sfinae_2print__ip_8hpp_source.html  (+8 more)
docs/latex/: annotated.tex  conceptconcepts_1_1__IsAnyOf.tex  conceptconcepts_1_1container__like.tex  conceptconcepts_1_1has__tuple__element.tex  conceptconcepts_1_1string__like.tex  conceptconcepts_1_1tuple__like.tex  concepts.tex  concepts_2print__ip_8hpp.tex  concepts_2print__ip_8hpp_source.tex  concepts_8hpp.tex  concepts_8hpp_source.tex  concepts__gtest_8cpp.tex  concepts__gtest_8cpp_source.tex  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a450380362cbf99a09ffbcf198cd3870.tex  dir_c213e9b6a4ec949e4abdbb75e26456cc.tex  files.tex  hierarchy.tex  main_8cpp.tex  main_8cpp_source.tex  namespaceconcepts.tex  namespacehw4.tex  namespaces.tex  namespacesfinae.tex  namespacesfinae_1_1details.tex  print__helpers_8hpp.tex  print__helpers_8hpp_source.tex  refman.tex  sfinae_2print__ip_8hpp.tex  sfinae_2print__ip_8hpp_source.tex  sfinae__gtest_8cpp.tex  sfinae__gtest_8cpp_source.tex  structsfinae_1_1details_1_1is__container.eps  structsfinae_1_1details_1_1is__container.tex  structsfinae_1_1details_1_1is__container_3_01T_00_01std_1_1void__t_3_01typename_01T_1_1iterator_01_4_01_4.eps  structsfinae_1_1details_1_1is__container_3_01T_00_01std_1_1void__t_3_01typename_01T_1_1iterator_01_4_01_4.tex  structsfinae_1_1details_1_1is__tuple.eps  structsfinae_1_1details_1_1is__tuple.tex  (+4 more)
src/: main.cpp
src/concepts/: concepts.hpp  (+2 more)
(+26 files in other folders)
